# Nova_Rust_Backend

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs  web_routes.rs
nova-db/: Cargo.toml
nova-db/src/: lib.rs  tables.rs
searcher/: Cargo.toml
searcher/src/: lib.rs  main.rs
sei-client/: Cargo.toml
sei-client/src/: chain_apis.rs  error.rs  lib.rs  transaction_sort.rs
sei-client/src/data_feild_structs/: mod.rs  nft_data_struct.rs  stake_data_sturct.rs  token_data_struct.rs
sei-client/src/data_rp_structs/: ibc_rp_struct.rs  mod.rs  nft_collect_contract_rp_struct.rs  token_contract_rp_struct.rs  tx_rp_struct.rs
service/: Cargo.toml
service/src/: erros.rs  lib.rs
service/src/responses/: get_user_income_nfts_hold_rp.rs  get_user_nfts_hold_rp.rs  get_user_nfts_hold_top_rp.rs  get_user_nfts_trade_info_rp.rs  get_user_tokens_hold_rp.rs  mod.rs
service/src/services/: get_user_income_nfts_hold.rs  get_user_nfts_hold.rs  get_user_nfts_hold_top.rs  get_user_nfts_trade_info.rs  get_user_tokens_hold.rs  get_user_tokens_hold_top.rs  mod.rs  sync_user_trade_histroy_data.rs
service/src/tools/: get_nftcollection_floor_price.rs  mod.rs  token_swap_route.rs
