[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version="4.7.0",features=["openssl"]}
actix-cors={version="0.7.0"}
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "macros","json"] }
tokio = { version = "1.38.0", features = ["full"] }
openssl={version="0.10.64"}
dotenv = {version="0.15.0"}
anyhow={version="1.0.86"}
