[package]
name = "sei-client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["cookies","json"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json={version = "1.0.0"}
base64 = "0.22.1"
anyhow="1.0.86"
futures = "0.3.30"