[package]
name = "services"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.209", features = ["derive"] }
serde_json={version = "1.0.127"}
tokio = { version = "1.40.0", features = ["full"] }
anyhow="1.0.86"
futures = "0.3.30"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "macros","json"] }

nova-db={path="../nova-db"}
sei-client={path="../sei-client"}